# batteryrul

./: .gitignore  Dockerfile  README.md  battery_rul.ipynb  import_mongodb.py  pyproject.toml  setup.py
.trunk/: trunk.yaml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: config.yaml
data/: Battery_RUL.csv
experiment/: trial_01_data_ingestion.py
src/RULBattery/: __init__.py
