[project]
name = "rulbattery"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gregorywmorris", email = "gwm1980@gmail.com"},
]
dependencies = [
    "pandas",
    "scikit-learn",
    "numpy",
    "matplotlib",
    "flask",
    "ipykernel",
    "xgboost",
    "python-box",
    "pyYAML",
    "ensure",
    "joblib",
    "types-PyYAML",
    "Flask-Cors",
    "seaborn",
    "pymongo",
    "streamlit",
    "mlflow",
    "dvc",
    "dagshub",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/#egg=BatteryRUL",
    "ipykernel>=6.29.5",
]
