[project]
name = "RULbattery"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gregorywmorris", email = "gwm1980@gmail.com"},
]
dependencies = [
    "pandas",
    "scikit-learn",
    "numpy",
    "matplotlib",
    "flask",
    "ipykernel",
    "xgboost>=2.1.1",
    "python-box",
    "pyYAML",
    "ensure",
    "joblib",
    "types-PyYAML",
    "Flask-Cors",
    "seaborn",
    "pymongo",
    "streamlit",
    "mlflow",
    "dvc",
    "dagshub",
    "plotly>=5.23.0",
    "python-dotenv>=1.0.1",
    "lightgbm>=4.5.0",
    "catboost>=1.2.5",
    "nbformat>=5.10.4",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/#egg=BatteryRUL",
    "ipykernel>=6.29.5",
]
